# simple-faas

./: .devcontainer.json  .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: main.yml
docker/app/: Dockerfile
docker/simple-faas/: Dockerfile
simple-faas/: Cargo.toml  config.yml
simple-faas-docker/: Cargo.toml  README.md
simple-faas-docker/src/: auth.rs  client.rs  lib.rs  modem.rs  util.rs  v1_37.rs
simple-faas/src/: config.rs  main.rs
