[package]
name = "simple-faas-docker"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
reqwest = "0.11.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
url = "2.2.2"
log = "0.4"
base64 = "0.13.0"
hyper = "0.14.18"
tokio = { version = "1.18.2", features = ["io-util"] }
bytes = "1"
